Added start and end index in update, read and CMP
Added the ability to add, remove or compare char arrays to specific memory blocks in eeprom.

--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=easyEEPROM
-version=1
+version=2
 author=75marsel
 maintainer=for hobby purposes
 sentence=for hobby purposes
-paragraph=This library is for storing, retreiving char array on an eeprom.
+paragraph=Now you can specify the target memory block in eeprom for read, save and compare.
 category=idk
 url=https://https://github.com/75marsel/easyEEPROM
 architectures=*
