--- a/library.properties
+++ b/library.properties
@@ -1,5 +1,5 @@
 name=easyEEPROM
-version=2.29022024 hotfix
+version=3 abstraction
 author=75marsel
 maintainer=for hobby purposes
 sentence=for hobby purposes
